apps/base/njdbot-discord/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: njdbot-discord
  name: njdbot-discord-service
  namespace: njdbot-discord
spec:
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app: njdbot-discord
  type: ClusterIP
